test/files/invalid/invalid_prefix.fbs
table Foo {
  x0: [bool] = +[];
  x1: bool = +true;
  x2: uint8 = +null;
  x3: string = +"hello";
  x4: float = +Hello;
}